--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Application Structure Plan: The 'Source Report' (README.md) explicitly outlines the required components for a marketing landing page. The designed SPA structure directly implements this as a top-to-bottom narrative flow, which is the most user-friendly and conventional structure for this purpose. The flow is: Hero (Immediate Value Prop) -> About (Trust Building) -> Projects (Proof of Work) -> Clients (Social Proof) -> Contact (Conversion) -> Footer (Navigation/Subscription). This logical flow guides the user from interest to conversion, fulfilling all requirements of the source document. -->
     <!-- Visualization & Content Choices: The Source Report's requirements are for content presentation, not data visualization. Therefore, Chart.js/Plotly are not used. Instead, content is presented using interactive, responsive grid layouts. Report Info (Projects) -> Goal (Showcase work) -> Viz/Method (Responsive 3-column card grid) -> Interaction (Hover states, 'Read More' button) -> Justification (Visually scannable proof of work as requested). Report Info (Clients) -> Goal (Build social proof) -> Viz/Method (Responsive 5-column testimonial card grid) -> Interaction (None, static display) -> Justification (Presents testimonials clearly as requested). Report Info (Contact Form/Newsletter) -> Goal (Lead capture) -> Viz/Method (Standard HTML forms) -> Interaction (Form submission) -> Justification (Fulfills backend data capture requirement). -->
     <!-- CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
-    <title>FLIPR - Full Stack Task</title>
+    <title>Apex Solutions - Consultation, Design & Marketing</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
@@ -53,7 +53,7 @@
             <div class="container mx-auto px-6 flex justify-between items-center">
                 <div class="text-2xl font-bold text-teal-700">
                     <a href="#" class="flex items-center space-x-2">
-                        <span class="font-bold text-2xl text-gray-800">Logo</span>
+                        <span class="font-bold text-2xl text-gray-800">Apex Solutions</span>
                     </a>
                 </div>
                 <div class="hidden md:flex space-x-8">
@@ -166,9 +166,9 @@
                             <h3 class="text-xl font-bold text-gray-800 my-1">Project Name Five</h3>
                             <p class="text-gray-600 text-sm flex-grow mb-4">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                             <a href="#" class="mt-auto text-center w-full bg-gray-200 text-gray-800 font-semibold py-2 px-4 rounded-lg hover:bg-gray-300 transition duration-300">
-                    <div class="text-center text-sm md:text-right">
-                        &copy; 2025 Your Company Name. All Rights Reserved.
-                        <a href="admin.html" class="block text-xs text-gray-600 hover:text-gray-400 mt-1">Admin Panel</a>
+                                READ MORE
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -294,7 +294,7 @@
                 <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-6">
                     <div class="text-center md:text-left">
                         <a href="#" class="flex items-center justify-center md:justify-start space-x-2">
-                            <span class="font-bold text-2xl text-white">Logo</span>
+                            <span class="font-bold text-2xl text-white">Apex Solutions</span>
                         </a>
                     </div>
                      
@@ -314,7 +314,8 @@
                     </div>
 
                     <div classs="text-center text-sm md:text-right">
-                        &copy; 2025 Your Company Name. All Rights Reserved.
+                        &copy; 2025 Apex Solutions. All Rights Reserved.
+                        <a href="admin.html" class="block text-xs text-gray-600 hover:text-gray-400 mt-1">Admin Panel</a>
                     </div>
                 </div>
             </div>
